--- a/index.html
+++ b/index.html
@@ -15,62 +15,79 @@
 <body>
     <section class="flex">
         <div class="half-width">
-            <h1> <span class="orange">Skip</span> The Diet, Just Eat Healty With Food Network</h1>
+            <h1> <span class="orange">Skip</span> The Diet, <br>Just Eat Healty <br>With Food Network</h1>
             <p style="color: grey;">Imagine you don't need a diet because we provide healthy and delicious food for
                 you!</p>
-            <br>
-            <a class="link" target="_blank" href="https://www.google.com/?p1=3">Order Food</a>
+            <br><br>
+            <a class="link" target="_blank" href="https://www.google.com/?p1=3">ORDER FOOD</a>
         </div>
         <div class="half-width">
             <img id="img1" src="images/female/Group 8425.png" alt="">
         </div>
     </section>
-    <section class="flex mid">
+    <section class="flex mid-banner">
         <div class="half-width">
             <img id="img2" src="images/female/Person Image.png" alt="">
         </div>
         <div class="half-width">
-            <br>
-            <br>
-            <h1>About Me</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque laudantium expedita veniam corporis?
-                Eius, quidem veniam itaque dignissimos eaque accusantium recusandae architecto consectetur alias
-                obcaecati laboriosam eligendi impedit ullam ipsam?</p>
-            <br>
-            <a class="link" href="https://www.youtube.com/">Contact Me</a>
+            <br> <br> <br> <br>
+            <h1 style="color: grey;">About Cooking</h1>
+            <p>Cooking food is neither a discovery nor an invention, but it is said that it is just an accident. This
+                happened about 1000 years ago and just after the man has come to know about fire.</p>
+            <br><br> <br>
+            <a target="_blank" class="link" href="https://www.youtube.com/">CONTACT ME</a>
         </div>
     </section>
+
     <section>
         <h1 style=" text-align: center;color: grey;">My Recipies</h1>
         <div class="third-para">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda quo dolor totam corrupti debitis
-                cumque? Sapiente facilis nihil vitae assumenda officia. Id laudantium magnam velit cumque ut corporis
-                eaque illum.</p>
+            <p style="text-align: center;"> You don't have to cook fancy or complicated masterpieces <br>-just <b>good
+                    food</b> from <b>fresh
+                    ingredients!</b></p>
+            <br> <br>
         </div>
         <div class="flex">
             <div id="item1" class="third-width">
                 <img src="images/food/Project Cover.jpg" alt="">
-                <h1>Title 1</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quos culpa alias, sapiente magni sint rem
-                    ad dignissimos, magnam placeat maiores quae officiis totam amet eligendi, nisi corporis veniam
-                    neque!</p>
+                <h2>Egg with Beef Kebab!</h2>
+                <p>Why do I need six pack <b>ABS</b><br> when I can have healthy <b>kebABS</b> <br><b>Price:</b>
+                    <i>499 ৳</i>
+                </p>
             </div>
             <div id="item2" class="third-width">
                 <img src="images/food/Project Cover.png" alt="">
-                <h1>Title 1</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero asperiores sapiente nesciunt sunt
-                    excepturi at blanditiis fugiat quaerat, eligendi molestias ducimus nisi. Cum inventore ratione
-                    corrupti veniam totam quos magnam.</p>
+                <h2>Vegetable Soup!</h2>
+                <p>Home tastes <b>Like -</b><br>Mixed with Begetable soup <b>Spicy & Tasty</b> <br> <b>Price:</b>
+                    <i>399 ৳</i>
+                </p>
             </div>
             <div id="item3" class="third-width">
                 <img src="images/food/Project Cover1.jpg" alt="">
-                <h1>Title 1</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus eum reiciendis magni vero sequi
-                    maxime accusantium autem culpa nesciunt doloremque consequatur eligendi molestiae reprehenderit
-                    necessitatibus quas ad, placeat natus numquam!</p>
+                <h2>BBQ with Salad!</h2>
+                <p>Keep <b>CALM</b> <br><b>GRILL</b> on <br> <b>Price:</b> <i>699 ৳</i></p>
             </div>
         </div>
     </section>
+
+    <section class="flex last-banner">
+        <div class="half-width">
+            <br> <br> <br>
+            <h4 id="chart">-A HEALTY FOOD CHART </h4>
+            <h2 id="chart-que">TRAIN <br> YOUR <br> BODY <br> TO CRAVE <br> HEALTHY <br> FOOD</h2>
+        </div>
+        <div class="half-width">
+            <img src="images/chart/pie-chart.jpg" alt="">
+        </div>
+    </section>
+
+    <footer id="footer">
+        <br>
+        <h2> <span style="color: yellow;">FOOD</span> <span style="color: grey;">NETWORK</span></h2>
+        <h6 style="color: wheat;">Eat healthy to live healthy. Live healthy to live happy.</h6>
+        <br><br><br>
+    </footer>
+
 </body>
 
 </html>
